edie-homepage/styles/layout.css
/* Global */

/* Contact Form (Global) */
.contact form {
  display: flex;
  flex-direction: column;
}

.contact label {
  padding-bottom: 1rem;
}

.contact input {
  border-style: none;
  padding: 1rem 2rem;
}

.contact button {
  border-style: none;
  padding: 1rem 3rem;
}

/* Header */
header {
  position: sticky;
  top: 0;
  background-color: white;
  max-height: 15vh;
  max-width: 100vw;
  padding: 5vh 5vw;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
}

nav {
  display: flex;
  align-items: center;
}

nav a {
  text-decoration: none;
  line-height: 2.2rem;
  font-size: 1.8rem;
  font-weight: 500;
}

nav a:not(:first-child) {
  margin-left: 2.5rem;
}

header button {
  display: none;
  border: none;
  background-color: white;
}

header svg {
  background-color: white;
}

.active {
  display: flex;
}

.hidden {
  display: none;
}

.full-screen {
  height: 20vh;
  width: 100vw;
  top: 40vh;
  left: 0;
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

@media only screen and (max-width: 600px) {
  header {
    max-height: 7vh;
  }

  header nav {
    display: none;

    flex-direction: column;
    align-items: center;
  }

  nav a {
    margin: 2rem 0;
  }

  header button {
    display: block;
  }
}

/* Main */

/* Home */
#home {
  display: flex;
  flex-direction: column;
}

#home > *:not(.hero-image) {
  margin: 1vh 10vw;
  max-width: 40vw;
}

.hero-image {
  width: 90vw;
  margin: 0 5vw;
}

.hero-image img {
  border-radius: 1.2rem;
}

@media only screen and (max-width: 600px) {
  #home > *:not(.hero-image) {
    margin: 1vh 10vw;
    max-width: 85vw;
  }
}

/* Services */
#services {
  padding-top: 15vh;
  width: 90vw;
  margin-left: 5vw;
}

#services h2 {
  max-width: 60vw;
  margin-bottom: 9vh;
}

#services .cards-container {
  max-width: 81vw;
  margin-left: 4.5vw;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

#services .card {
  padding: 3rem 2rem;
  max-width: 30%;
  border-radius: 1.2rem;
}

#services .card:hover {
  box-shadow: 0px 10px 30px rgba(51, 51, 51, 0.1);
  transform: scale(1.05);
  transition: all 1s ease-in-out;
}

#services .card > * {
  padding: 1rem;
}

#services .material-icons {
  padding: 1rem;
  border-radius: 1.2rem;
}

#services .button-wrapper button {
  padding: 1rem;
  border-radius: 1.2rem;
  border-style: none;
}

@media only screen and (max-width: 600px) {
  #services {
    padding-top: 12vh; /* Header */
  }

  #services h2 {
    max-width: 80%;
    margin-left: 5vw;
    margin-bottom: 5vh;
  }

  #services .card {
    max-width: 100%;
    margin-bottom: 4rem;
  }
}

/* Our works */
#our-works {
  padding-top: 15vh;
  min-height: 100vh;
  width: 90vw;
  margin-left: 5vw;
  display: flex;
  flex-direction: column;
}

#our-works h2 {
  margin-bottom: 5rem;
}

#our-works .works-container {
  width: 80vw;
  margin-left: 5vw;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

#our-works .works-container > *:nth-child(2n + 1) {
  margin-top: 10rem;
}

#our-works .work-card {
  width: 40%;
}

#our-works img {
  border-radius: 1.2rem;
}

#our-works a {
  align-self: flex-end;
  margin-right: 5vw;
}

@media only screen and (max-width: 600px) {
  #our-works {
    padding-top: 12vh; /* Header */
  }

  #our-works h2 {
    margin-left: 5vw;
    max-width: 80%;
  }

  #our-works .works-container {
    width: 100%;
    margin-left: 0;
  }

  #our-works .work-card {
    width: 100%;
    margin-bottom: 4rem;
  }

  #our-works .works-container > *:nth-child(2n + 1) {
    margin-top: 0;
  }

  #our-works a {
    align-self: flex-start;
  }
}

/* Our team */
#our-team {
  padding-top: 15vh;
  min-height: 100vh;
  margin-left: 5vw;
  width: 90vw;
  display: flex;
  align-items: center;
}

@media only screen and (max-width: 600px) {
  #our-team {
    padding-top: 12vh; /* Header */
  }
}

#our-team .text-container {
  max-width: 30%;
}

#our-team .text-container > * {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

#our-team .image img {
  border-radius: 1.2rem;
}

#our-team .images-container {
  width: 70%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-left: 10%;
}

#our-team .images-container > *:first-child {
  width: 55%;
  margin-right: 2rem;
}

#our-team .image-pair {
  width: 45%;
}

#our-team .image-pair > *:first-child {
  width: 90%;
  margin-bottom: 2rem;
}

#our-team .image-pair > *:nth-child(2) {
  width: 100%;
}

@media only screen and (max-width: 600px) {
  #our-team {
    flex-direction: column;
    align-items: flex-start;
  }

  #our-team .text-container {
    max-width: 80%;
    margin-left: 5vw;
  }

  #our-team .images-container {
    margin-top: 4rem;
    margin-left: 0;
    width: 100%;
  }
}

/* Clients */
#clients {
  padding-top: 15vh;
  min-height: 100vh;
}

@media only screen and (max-width: 600px) {
  #clients {
    padding-top: 12vh; /* Header */
  }
}

/* Contact (Footer) */
#footer {
  min-height: 40vh;
}

@media only screen and (max-width: 600px) {
  #footer {
    min-height: 100vh;
  }
}

